--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.33.0
-pandas==2.2.1
-numpy==1.26.4
-plotly==5.20.0
-networkx==3.3
-streamlit-option-menu==0.3.6
+streamlit
+pandas
+numpy
+plotly
+networkx
+streamlit-option-menu
